--- a/XZWLocationManage/XZWLocationManage/Info.plist
+++ b/XZWLocationManage/XZWLocationManage/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>想要获取地理位置，显示详细信息</string>
+    <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+    <string>想要获取地理位置持续获取，显示详细信息</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
